# ranking-table-tennis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.rst  compute_all.py  compute_rankings.py  compute_single_tournament.py  config.yaml  create_csv_files.py  expected_result.csv  fix_script.py  lista_jugadores.csv  lista_partidos.csv  main.py  mainsub14.py  models.py  modelstests.py  preprocess.py  publish.py  puntos_por_ronda.csv  pyproject.toml  ranking_nuevo.csv  ranking_viejo.csv  requirements_rtt.txt  setup.py  temp_fix_tests.py  test.py  testsub14.py  tox.ini  unexpected_result.csv  utils.py  working_requirements.txt
.github/workflows/: publish.yml  regression_tests.yml
commands/: clean.sh  install.sh  install_dev.sh
config/: expected_result.csv  puntos_por_participar.csv  puntos_por_participar2016.csv  puntos_por_ronda.csv.bkp  puntos_por_ronda2016.csv  unexpected_result.csv
old_scripts/: compute_all.py  modelstests.py
ranking_table_tennis/: command_line.py  compute_rankings.py  configs.py  models.py  preprocess.py  preprocess_unattended.py  publish.py  utils.py
ranking_table_tennis/config/: config.yaml  config_210101_211231.yaml  config_220101_220723.yaml  config_220724_221231.yaml  config_230101_231231.yaml  config_240101_241231.yaml  config_250101_251231.yaml  config_250601_251231.yaml  config_260101_261231.yaml  expected_result.csv  logging.yaml  participation_points.csv  points_per_round.csv  unexpected_result.csv
ranking_table_tennis/config/activeplayer/: activeplayer.yaml
ranking_table_tennis/config/aux/: aux_2022.yaml
ranking_table_tennis/config/base_config/: activeplayer.yaml  base_config.yaml  initial_metadata.yaml  labels.yaml  roundnames.yaml  sheetname.yaml
ranking_table_tennis/config/compute/: base_compute.yaml  compute_2022_1.yaml  compute_2022_2.yaml  compute_2023_1.yaml  compute_2024_1.yaml  compute_2025_1.yaml  compute_2026_1.yaml
ranking_table_tennis/config/default/: default_2022.yaml
ranking_table_tennis/config/initial_metadata/: initial_metadata.yaml
ranking_table_tennis/config/io/: base_io.yaml  io_2021.yaml  io_2022.yaml  io_2023.yaml  io_2024.yaml  io_2025.yaml  io_2026.yaml
ranking_table_tennis/config/labels/: labels.yaml
ranking_table_tennis/config/roundnames/: roundnames.yaml
ranking_table_tennis/config/sheetname/: sheetname.yaml  sheetname_2022.yaml
ranking_table_tennis/helpers/: __init__.py  excel.py  github.py  gspread.py  initial_rating.py  logging.py  markdown.py  pickle.py  plotter.py  publisher.py  temp_players.py
ranking_table_tennis/models/: __init__.py  players.py  rankings.py  tournaments.py
ranking_table_tennis/utils/: __init__.py  excel_helper.py  gspread_helper.py  markdown_helper.py  pickle_helper.py  publisher_helper  publisher_helper.py  temp_players_helper.py
tests/: conftest.py  test_cli_compute_rankings.py  test_cli_preprocess.py  test_cli_publish.py  test_compute_rankings.py  test_models.py  test_preprocess.py  test_publish.py  testxlslaoder.py
tests/data_up_to_S2022T04/: Liga Dos Orillas 2022 - Carga de partidos.xlsx  Torneo S2022T01 para publicar.xlsx  Torneo S2022T02 para publicar.xlsx  Torneo S2022T03 para publicar.xlsx  Torneo S2022T04 para publicar.xlsx  championship_details_df.csv  history_df.csv  players.pk  players_df.csv  ranking_df.csv  rankings.pk  rating_details_df.csv  raw_ranking_S2022T01.xlsx  raw_ranking_S2022T02.xlsx  raw_ranking_S2022T03.xlsx  raw_ranking_S2022T04.xlsx  tournaments.pk  tournaments_df.csv
tests/data_up_to_S2022T04/S2022T01/: Estadisticas_Por_Torneo.md  Log_Campeonato.md  Log_Rating.md  Metadata.md  Nivel_de_Juego.md  Nivel_de_Juego_Ampliado.md  Nivel_de_Juego_Inicial.md  Partidos.md  Primera.md  Segunda.md  Tercera.md
tests/data_up_to_S2022T04/S2022T02/: Log_Campeonato.md  Log_Rating.md  Metadata.md  Nivel_de_Juego.md  Nivel_de_Juego_Ampliado.md  Partidos.md  Primera.md  Segunda.md  Tercera.md
tests/data_up_to_S2022T04/S2022T03/: Log_Campeonato.md  Log_Rating.md  Metadata.md  Nivel_de_Juego.md  Nivel_de_Juego_Ampliado.md  (+5 more)
(+11 files in other folders)
