[tool.poetry]
name = "ranking_table_tennis"
version = "2024.6.24"
description = "A ranking table tennis system"
readme = "README.md"
authors = [ "Sebastian Vanrell srvanrell_gmail_com" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
license = "GPL-2.0-or-later"
homepage = "https://srvanrell.github.io/ranking-table-tennis/"
repository = "http://github.com/srvanrell/ranking-table-tennis"
packages = [
    { include = "ranking_table_tennis" },
]

[tool.poetry.dependencies]
python = ">=3.8"
PyYAML = ">=5.4.1"
Unidecode = "==1.*"
gspread-dataframe = "==3.*"
gspread = "==5.*"
hydra-core = "==1.2.*"
matplotlib = "==3.*"
oauth2client = "==4.*"
omegaconf = "==2.2.*"
openpyxl = ">=3.0.6,<3.1.0"
pandas = "==1.3.*"
plotly = "==5.*"
tabulate = "==0.8.*"
urllib3 = "==1.*"
numpy = ">=1.24,<2"

[tool.poetrygroup.test.dependencies]
pre-commit = "2.18.*"
pyclean = "2.2.*"
pytest = "7.2.*"
pytest-shell-utilities ="1.5.*"
pytest_profiling = "1.7.*"

[tool.poetry.scripts]
rtt = "ranking_table_tennis.command_line:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
