[tool.poetry]
name = "ranking_table_tennis"
version = "2025.6.25"
description = "A ranking table tennis system"
readme = "README.md"
authors = [ "Sebastian Vanrell srvanrell_gmail_com" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
license = "GPL-2.0-or-later"
homepage = "https://srvanrell.github.io/ranking-table-tennis/"
repository = "http://github.com/srvanrell/ranking-table-tennis"
packages = [
    { include = "ranking_table_tennis" },
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
PyYAML = ">=5.4.1"
Unidecode = "==1.*"
gspread-dataframe = "==3.*"
gspread = "==5.*"
hydra-core = "==1.3.*"
matplotlib = "==3.*"
oauth2client = "==4.*"
omegaconf = "==2.3.*"
openpyxl = "==3.1.*"
pandas = "==2.2.*"
plotly = "==5.*"
tabulate = "==0.9.*"
urllib3 = "==2.*"
numpy = ">=1.24,<2"

[tool.poetry.group.test.dependencies]
pre-commit = "4.*"
pyclean = "3.*"
pytest = "8.*"
pytest-shell-utilities ="1.9.*"
pytest_profiling = "1.8.*"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
rtt = "ranking_table_tennis.command_line:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.pytest.ini_options]
# minversion = "7.0"
# # addopts = "-ra -q"
# testpaths = [
#     "tests",
# ]
