[project]
name = "ranking_table_tennis"
version = "2025.11.30"
description = "A ranking table tennis system"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Sebastian Vanrell"} ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
license = { file = "LICENSE" }

dependencies = [
    'PyYAML>=5.4.1',
    'Unidecode>=1.0,<2.0',
    'gspread-dataframe>=3.0,<4.0',
    'gspread>=5.0,<6.0',
    'hydra-core>=1.3,<2.0',
    'matplotlib>=3.0,<4.0',
    'oauth2client>=4.0,<5.0',
    'omegaconf>=2.3,<3.0',
    'openpyxl>=3.1,<4.0',
    'pandas>=2.2,<3.0',
    'plotly>=5.0,<6.0',
    'tabulate>=0.9,<1.0',
    'urllib3>=2.0,<3.0',
    'numpy>=1.24,<2',
]

[project.urls]
Homepage = "https://srvanrell.github.io/ranking-table-tennis/"
Repository = "https://github.com/srvanrell/ranking-table-tennis"

[project.optional-dependencies]
test = [
    "pre-commit>=4.0,<5.0",
    "pyclean>=3.0,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-shell-utilities>=1.9,<2.0",
    "pytest_profiling>=1.8,<2.0",
    "pytest-cov>=6.0,<7.0",
]

[project.scripts]
rtt = "ranking_table_tennis.command_line:main"

[tool.setuptools.packages.find]
include = ["ranking_table_tennis"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
